apps/op-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-api
  namespace: APP_NAMESPACE
spec:
  selector:
    app: op-api
  ports:
    - port: 80
      targetPort: 3000
